...
        <LinearLayout android:id="@+id/tour_steps" android:layout_width="0dp" android:layout_weight="1"
            android:layout_height="wrap_content" android:orientation="horizontal" android:importantForAccessibility="no" />
        <TextView android:id="@id/tour_progress" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginStart="14dp"
            android:textColor="@color/text_secondary" android:textSize="@dimen/ui_text_label" />
    </LinearLayout>
    <ScrollView android:id="@+id/tour_scroll" android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1" android:fillViewport="true" android:clipToPadding="false">
        <LinearLayout android:id="@+id/tour_content" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:paddingHorizontal="@dimen/page_margin" android:paddingTop="@dimen/ui_gap_group" android:paddingBottom="@dimen/ui_gap_section" />
    </ScrollView>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
...
